--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,5 +13,5 @@
 @import './components/footer';
 // @import './components/portfolio/filter';
 // @import './components/portfolio/projects';
-// @import './components/modal/backdrop';
-// @import './components/modal/form';
+@import './components/modal/backdrop';
+@import './components/modal/form';
