--- a/sass/components/modal/_form.scss
+++ b/sass/components/modal/_form.scss
@@ -54,14 +54,14 @@
 .form__textarea {
   margin: 0;
   padding: 12px 16px;
-  width: 448px;
+  width: 100%;
   height: 120px;
   resize: none;
   outline: transparent;
 
   font-size: 12px;
   line-height: 1.17;
-  letter-spacing: 0.01em;
+  letter-spacing: 0.03em;
 
   transition: border-color var(--transition), box-shadow var(--transition);
 
@@ -74,8 +74,8 @@
   &::placeholder {
     font-style: normal;
     font-weight: 400;
-    font-size: 12px;
-    line-height: 1.17;
+    font-size: 14px;
+    line-height: 1.14;
     letter-spacing: 0.01em;
 
     color: var(--plh-color);
@@ -86,9 +86,8 @@
   position: relative;
   display: block;
   margin-bottom: 30px;
-  padding-left: 22px;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   text-align: center;
 
   letter-spacing: 0.03em;
