--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import './components/button';
 @import './components/social';
 @import './components/header';
+@import './components/mob-menu';
 @import './components/hero';
 @import './components/features';
 @import './components/our-activity';
