--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -13,6 +13,12 @@ body {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
 }
 
 .section {
@@ -30,4 +36,9 @@ body {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
   margin: -1px;
+}
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
