--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -6,6 +6,11 @@
 
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../../images/Header-img-mob-1x.jpg);
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    .hero {
+      background-image: url(../../images/Header-img-mob-2x.jpg);
+    }
+  }
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -14,24 +19,30 @@
   padding-bottom: 118px;
 
   text-align: center;
+
   @media screen and (min-width: 768px) {
     max-width: 768px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url(../../images/Header-img-tablet-1x.jpg);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      .hero {
+        background-image: url(../../images/Header-img-tablet-2x.jpg);
+      }
+    }
   }
   @media screen and (min-width: 1200px) {
     max-width: 1600px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url(../../images/Header-img-desctop-1x.jpg);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      .hero {
+        background-image: url(../../images/Header-img-desctop-2x.jpg);
+      }
+    }
     padding-top: 200px;
     padding-bottom: 200px;
   }
 }
-// @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-//   .hero {
-//     background-image: url(../../images/Header-img-mob-2x.jpg);
-//   }
-// }
 
 .hero__title {
   max-width: 360px;
