--- a/sass/components/modal/_backdrop.scss
+++ b/sass/components/modal/_backdrop.scss
@@ -27,6 +27,10 @@
   .backdrop.is-hidden & {
     transform: translate(-50%, -50%) scale(1.1);
   }
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+  }
 }
 .modal__btn {
   display: flex;
@@ -63,4 +67,7 @@
   letter-spacing: 0.03em;
 
   color: var(--brand-color);
+  @media screen and (min-width: 1200px) {
+    line-height: 1.15;
+  }
 }
