--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,7 @@
 @import './components/team-list';
 @import './components/regular-customers';
 @import './components/footer';
-// @import './components/portfolio/filter';
-// @import './components/portfolio/projects';
+@import './components/portfolio/filter';
+@import './components/portfolio/projects';
 @import './components/modal/backdrop';
 @import './components/modal/form';
