--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,12 @@ body {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
 
 .visually-hidden {
   position: absolute;
@@ -666,6 +672,11 @@ body {
   padding-top: 30px;
   padding-bottom: 24px;
 }
+@media screen and (min-width: 1200px) {
+  .team__wrapper {
+    padding-bottom: 30px;
+  }
+}
 
 .team__subtitle {
   margin-bottom: 10px;
@@ -687,18 +698,30 @@ body {
 }
 
 .container__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
   font-size: 28px;
-  line-height: 1.19;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
+}
+@media screen and (min-width: 1200px) {
+  .container__title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.17;
+  }
 }
 
 .roster-customers {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .roster-customers {
+    flex-wrap: nowrap;
+  }
 }
 
 .roster-customers__client {
@@ -715,6 +738,18 @@ body {
   color: var(--accent-color);
   border-color: var(--accent-color);
 }
+@media screen and (min-width: 768px) {
+  .roster-customers__client {
+    padding: 16px 60px;
+    max-width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .roster-customers__client {
+    padding: 16px 32px;
+    max-width: 170px;
+  }
+}
 
 .roster-customers__icon {
   fill: currentColor;
@@ -726,6 +761,43 @@ body {
   text-align: center;
   background: var(--bgn-footer);
 }
+@media screen and (min-width: 1200px) {
+  .basement {
+    text-align: start;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .basement__section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .basement__section {
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: start;
+    gap: 93px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .basement__package {
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    gap: 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .basement__package {
+    gap: 70px;
+  }
+}
 
 .basement__logo {
   margin-bottom: 20px;
@@ -736,9 +808,25 @@ body {
   margin-bottom: 60px;
   text-align: center;
 }
+@media screen and (min-width: 768px) {
+  .basement__contacts {
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .basement__contacts {
+    width: 231px;
+    text-align: start;
+  }
+}
 
 .basement__social {
   margin-bottom: 60px;
+}
+@media screen and (min-width: 768px) {
+  .basement__social {
+    margin-bottom: 0;
+  }
 }
 
 .basement__leader {
@@ -785,6 +873,17 @@ body {
 .basement__form {
   max-width: 450px;
 }
+@media screen and (min-width: 1200px) {
+  .basement__form {
+    max-width: 570px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .mailing {
+    display: flex;
+  }
+}
 
 .mailing__input {
   width: 100%;
@@ -800,6 +899,15 @@ body {
   background-color: inherit;
   color: var(--contacts-color);
 }
+@media screen and (min-width: 1200px) {
+  .mailing__input {
+    display: flex;
+    align-items: center;
+    width: 358px;
+    margin-right: 12px;
+    text-align: start;
+  }
+}
 
 .mailing__button {
   padding: 10px 28px 10px 31px;
@@ -809,10 +917,110 @@ body {
   width: 200px;
   height: 50px;
 }
+@media screen and (min-width: 1200px) {
+  .mailing__button {
+    padding-left: 28px;
+  }
+}
 
 .mailing__icon {
   fill: currentColor;
   margin-left: 10px;
+}
+
+.radio {
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+}
+
+.radio__button {
+  padding: 6px 22px;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  border-radius: 4px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  transition: background-color var(--transition), color var(--transition), box-shadow var(--transition);
+  border-color: transparent;
+  background-color: var(--bgn-section);
+  color: var(--brand-color);
+}
+.radio__button:hover, .radio__button:focus {
+  cursor: pointer;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  border-color: transparent;
+  background-color: var(--accent-color);
+  color: var(--secondary-color);
+}
+
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.projects__focus {
+  display: block;
+  transition: box-shadow var(--transition);
+}
+.projects__focus:hover, .projects__focus:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.projects__focus:hover .overlay, .projects__focus:focus .overlay {
+  transform: translateY(0);
+}
+
+.projects__wrapper {
+  padding: 20px 24px;
+  background: var(--secondary-color);
+  border-right: 1px solid var(--bgn-port);
+  border-left: 1px solid var(--bgn-port);
+  border-bottom: 1px solid var(--bgn-port);
+}
+
+.projects__title {
+  margin-bottom: 4px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--brand-color);
+}
+
+.projects__filter {
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+  color: var(--main-color);
+}
+
+.thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--bgn-overlay);
+  transform: translateY(100%);
+  transition: transform var(--transition);
+}
+
+.overlay__text {
+  padding: 63px 24px;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: var(--secondary-color);
 }
 
 .backdrop {
@@ -839,7 +1047,7 @@ body {
   transform: translate(-50%, -50%) scale(1);
   transition: transform var(--transition);
 }
-.backdrop.is-hidden .modal {
+.is-hidden .modal {
   transform: translate(-50%, -50%) scale(1.1);
 }
 @media screen and (min-width: 1200px) {
