--- a/sass/components/_regular-customers.scss
+++ b/sass/components/_regular-customers.scss
@@ -1,15 +1,23 @@
 .container__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
   font-size: 28px;
-  line-height: 1.19;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.17;
+  }
 }
 .roster-customers {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+  }
 }
 .roster-customers__client {
   display: flex;
@@ -26,6 +34,14 @@
   &:focus {
     color: var(--accent-color);
     border-color: var(--accent-color);
+  }
+  @media screen and (min-width: 768px) {
+    padding: 16px 60px;
+    max-width: 226px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 16px 32px;
+    max-width: 170px;
   }
 }
 
