--- a/css/main.css
+++ b/css/main.css
@@ -440,7 +440,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   background-color: var(--backgraund-hero);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/Header-img-mob-1x.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./images/Header-img-mob-1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -450,31 +450,31 @@ body {
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero .hero {
-    background-image: url(../../images/Header-img-mob-2x.jpg);
+    background-image: url(./images/Header-img-mob-2x.jpg);
   }
 }
 @media screen and (min-width: 768px) {
   .hero {
     max-width: 768px;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/Header-img-tablet-1x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./images/Header-img-tablet-1x.jpg);
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero .hero {
-    background-image: url(../../images/Header-img-tablet-2x.jpg);
+    background-image: url(./images/Header-img-tablet-2x.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
   .hero {
     max-width: 1600px;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/Header-img-desctop-1x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./images/Header-img-desctop-1x.jpg);
     padding-top: 200px;
     padding-bottom: 200px;
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero .hero {
-    background-image: url(../../images/Header-img-desctop-2x.jpg);
+    background-image: url(./images/Header-img-desctop-2x.jpg);
   }
 }
 
@@ -928,11 +928,36 @@ body {
   margin-left: 10px;
 }
 
-.radio {
-  margin-bottom: 50px;
+.radio-box {
   display: flex;
-  justify-content: center;
+  width: 326px;
+  height: 91px;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 768px) {
+  .radio-box {
+    width: auto;
+    height: auto;
+    margin-bottom: 30px;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .radio-box {
+    margin-bottom: 50px;
+  }
+}
+
+.radio {
+  display: flex;
+  flex-wrap: wrap;
   gap: 8px;
+  align-content: space-between;
+}
+@media screen and (min-width: 768px) {
+  .radio {
+    flex-wrap: nowrap;
+  }
 }
 
 .radio__button {
@@ -945,6 +970,7 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   transition: background-color var(--transition), color var(--transition), box-shadow var(--transition);
+  border: 0;
   border-color: transparent;
   background-color: var(--bgn-section);
   color: var(--brand-color);
@@ -960,8 +986,15 @@ body {
 
 .projects {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   gap: 30px;
+}
+@media screen and (min-width: 768px) {
+  .projects {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .projects__focus {
