--- a/sass/components/portfolio/_projects.scss
+++ b/sass/components/portfolio/_projects.scss
@@ -1,8 +1,12 @@
 .projects {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
-
   gap: 30px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 .projects__focus {
   display: block;
