--- a/css/main.css
+++ b/css/main.css
@@ -892,7 +892,7 @@ body {
   margin-bottom: 20px;
   padding-left: 16px;
   padding-right: 16px;
-  text-align: center;
+  text-align: start;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
