--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -116,7 +116,7 @@
   margin-bottom: 20px;
   padding-left: 16px;
   padding-right: 16px;
-  text-align: center;
+  text-align: start;
 
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
