--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,6 +2,9 @@
   position: relative;
   border-bottom: 1px solid var(--border-col);
 }
+.header__container {
+  position: relative;
+}
 .header__logo {
   padding-top: 16px;
   padding-bottom: 16px;
