--- a/sass/components/portfolio/_projects.scss
+++ b/sass/components/portfolio/_projects.scss
@@ -3,9 +3,10 @@
   flex-direction: column;
   flex-wrap: wrap;
   gap: 30px;
+  justify-content: center;
   @media screen and (min-width: 768px) {
-    display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-start;
   }
 }
 .projects__focus {
@@ -50,6 +51,13 @@
 .thumb {
   position: relative;
   overflow: hidden;
+  width: 450px;
+  @media screen and (min-width: 768px) {
+    width: 354px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 370px;
+  }
 }
 .overlay {
   position: absolute;
