--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -22,10 +22,10 @@
 }
 .header__menu {
   position: absolute;
-  top: 10px;
-  right: 15px;
   width: 40px;
   height: 40px;
+  top: 10px;
+  right: 15px;
   border: transparent;
   background-color: inherit;
   @media screen and (min-width: 768px) {
@@ -60,12 +60,11 @@
   gap: 30px;
   @media screen and (min-width: 768px) {
     display: flex;
-    padding-top: 21px;
     flex-direction: column;
     gap: 10px;
+    justify-content: center;
   }
   @media screen and (min-width: 1200px) {
-    padding: 0;
     flex-direction: row;
     gap: 30px;
   }
@@ -129,22 +128,5 @@
     margin-right: 10px;
     width: 10px;
     height: 16px;
-  }
-}
-
-.current {
-  position: relative;
-
-  color: var(--accent-color);
-  &::after {
-    content: '';
-    display: block;
-
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    position: absolute;
-    bottom: -1px;
-    background-color: var(--accent-color);
   }
 }
