--- a/sass/components/_mob-menu.scss
+++ b/sass/components/_mob-menu.scss
@@ -8,17 +8,16 @@
   background-color: var(--secondary-color);
 }
 .mob-menu__close {
+  padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: absolute;
   width: 40px;
   height: 40px;
-
-  position: absolute;
   top: 10px;
   right: 15px;
   border-color: transparent;
-
   background-color: inherit;
 }
 .mob-menu__icon {
@@ -84,4 +83,23 @@
   height: 1px;
   margin-right: 10px;
   border: var(--bgn-border);
+}
+
+.current {
+  position: relative;
+
+  color: var(--accent-color);
+  @media screen and (min-width: 768px) {
+    &::after {
+      content: '';
+      display: block;
+
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
+      position: absolute;
+      bottom: -1px;
+      background-color: var(--accent-color);
+    }
+  }
 }
