--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -128,6 +128,7 @@
     display: flex;
     align-items: center;
     width: 358px;
+    margin-bottom: 0;
     margin-right: 12px;
     text-align: start;
   }
