--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -9,10 +9,13 @@ body {
   text-decoration: none;
 }
 .container {
-  max-width: 480px;
+  max-width: 320px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
+  }
   @media screen and (min-width: 768px) {
     max-width: 768px;
   }
