--- a/sass/components/portfolio/_projects.scss
+++ b/sass/components/portfolio/_projects.scss
@@ -51,7 +51,10 @@
 .thumb {
   position: relative;
   overflow: hidden;
-  width: 450px;
+  width: 290px;
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
   @media screen and (min-width: 768px) {
     width: 354px;
   }
