home-work-8finisch

--- a/css/main.css
+++ b/css/main.css
@@ -368,6 +368,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow: auto;
   padding: 48px 40px;
 }
 
