--- a/sass/components/_mob-menu.scss
+++ b/sass/components/_mob-menu.scss
@@ -28,7 +28,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
+  overflow: auto;
   padding: 48px 40px;
 }
 .mob-menu__list {
